--- a/index.html
+++ b/index.html
@@ -651,4 +651,197 @@
                 <div class="stat-number">K-12</div>
                 <div class="stat-label">Curriculum Development</div>
             </div>
-            <div class="stat
+            <div class="stat-card">
+                <div class="stat-number">2</div>
+                <div class="stat-label">Adult Training Tracks</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="partners section">
+        <h2 class="section-title">Our Partners</h2>
+        <p style="text-align: center; color: #888; margin-bottom: 3rem; font-size: 1.1rem;">
+            Building strategic relationships to amplify impact and ensure industry alignment
+        </p>
+        <div class="partners-scroll">
+            <div class="partners-track">
+                <div class="partner-logo">
+                    <div class="logo-box">NEAAAT</div>
+                    <p class="partner-label">Charter School Partner</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">Tenable</div>
+                    <p class="partner-label">Security Tooling</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">ISC<sup>2</sup></div>
+                    <p class="partner-label">Certification Alignment</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">CompTIA</div>
+                    <p class="partner-label">Certification Alignment</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">SANS</div>
+                    <p class="partner-label">Training Partnership</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">ISACA</div>
+                    <p class="partner-label">Certification Alignment</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">KC7 Cyber</div>
+                    <p class="partner-label">Education Collaboration</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">sIQurity AI</div>
+                    <p class="partner-label">Technology Partner</p>
+                </div>
+                <!-- Duplicate for seamless loop -->
+                <div class="partner-logo">
+                    <div class="logo-box">NEAAAT</div>
+                    <p class="partner-label">Charter School Partner</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">Tenable</div>
+                    <p class="partner-label">Security Tooling</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">ISC<sup>2</sup></div>
+                    <p class="partner-label">Certification Alignment</p>
+                </div>
+                <div class="partner-logo">
+                    <div class="logo-box">CompTIA</div>
+                    <p class="partner-label">Certification Alignment</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="programs" class="programs section">
+        <h2 class="section-title">Our Programs</h2>
+        <div class="program-grid">
+            <div class="program-card">
+                <div class="program-icon">🎓</div>
+                <h3 class="program-title">K-12 Cybersecurity Curriculum</h3>
+                <p class="program-description">
+                    Modular, competency-based cybersecurity education for grades 5-12, co-developed with
+                    NEAAAT charter school. Aligned with industry standards and designed for scalable licensing.
+                </p>
+                <div class="program-highlight">
+                    ✓ Hands-on, project-based learning<br>
+                    ✓ Portfolio-driven assessment<br>
+                    ✓ Family engagement components
+                </div>
+            </div>
+
+            <div class="program-card">
+                <div class="program-icon">🛡️</div>
+                <h3 class="program-title">MSSP-lite Services</h3>
+                <p class="program-description">
+                    Affordable managed security services for nonprofits and small businesses, including
+                    risk assessments, penetration testing, and cybersecurity awareness training.
+                </p>
+                <div class="program-highlight">
+                    ✓ Enterprise-grade tools (Tenable)<br>
+                    ✓ Accessible pricing models<br>
+                    ✓ Future integration with sIQurity AI
+                </div>
+            </div>
+
+            <div class="program-card">
+                <div class="program-icon">💼</div>
+                <h3 class="program-title">Workforce Development</h3>
+                <p class="program-description">
+                    Adult training programs aligned with industry certifications (CompTIA, ISC2, GIAC)
+                    across three tracks: Red Team, Blue Team, and GRC.
+                </p>
+                <div class="program-highlight">
+                    ✓ Hands-on labs and simulations<br>
+                    ✓ Mentorship and internship placements<br>
+                    ✓ Job readiness support
+                </div>
+            </div>
+
+            <div class="program-card">
+                <div class="program-icon">🌐</div>
+                <h3 class="program-title">Community Outreach</h3>
+                <p class="program-description">
+                    Targeted programs for underserved populations: digital literacy for seniors, youth
+                    workshops in inner-city schools, rural community training, and multilingual resources
+                    to ensure no one is left behind in the digital age.
+                </p>
+                <div class="program-highlight">
+                    ✓ Age-inclusive & culturally responsive<br>
+                    ✓ Free resources in multiple languages<br>
+                    ✓ Inner-city & rural community focus
+                </div>
+            </div>
+
+            <div class="program-card">
+                <div class="program-icon">👨‍🏫</div>
+                <h3 class="program-title">Train-the-Trainer</h3>
+                <p class="program-description">
+                    Empowering educators with structured onboarding, teaching simulations, and
+                    micro-credentialing to deliver high-quality cybersecurity content independently.
+                </p>
+                <div class="program-highlight">
+                    ✓ Confidence-building modules<br>
+                    ✓ Peer feedback cycles<br>
+                    ✓ Ongoing professional development
+                </div>
+            </div>
+
+            <div class="program-card">
+                <div class="program-icon">🚀</div>
+                <h3 class="program-title">Strategic Partnerships</h3>
+                <p class="program-description">
+                    Building relationships with ISC2, CompTIA, SANS, ISACA, Cloud Range, and
+                    technology vendors to ensure alignment, recognition, and co-branded offerings.
+                </p>
+                <div class="program-highlight">
+                    ✓ Certification pathways<br>
+                    ✓ Tool sponsorships<br>
+                    ✓ Industry collaboration
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-section">
+        <h2>Close the Cybersecurity Equity Gap</h2>
+        <p>Every community deserves protection. Every student deserves opportunity.</p>
+
+        <div class="funding-ask">
+            <h3>Current Funding Goal</h3>
+            <div class="stat-number" style="font-size: 2.5rem; margin: 1rem 0;">$400,000</div>
+            <p style="margin-bottom: 1rem;">18-24 Month Growth Phase</p>
+            <p style="font-size: 0.95rem; opacity: 0.9;">
+                This investment will complete our K-12 curriculum v1.0, expand MSSP-lite services to
+                underserved nonprofits and small businesses, launch adult training tracks for career
+                changers from disadvantaged backgrounds, and scale our technology infrastructure for
+                nationwide impact in communities that need it most.
+            </p>
+        </div>
+
+        <div class="cta-buttons">
+            <a href="mailto:tony@cybersmrt.org" class="btn btn-primary">Partner With Us</a>
+            <a href="mailto:tony@cybersmrt.org" class="btn btn-secondary">Learn More</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="http://www.cybersmrt.org">www.cybersmrt.org</a>
+                <a href="mailto:tony@cybersmrt.org">tony@cybersmrt.org</a>
+                <a href="https://www.linkedin.com/company/cybersmrt">LinkedIn</a>
+            </div>
+            <p class="footer-text">
+                © 2025 CyberSmrt | Service-Disabled Veteran-Owned 501(c)(3) | EIN: 33-3117801<br>
+                Securing the underserved, one community at a time.
+            </p>
+        </div>
+    </footer>
+</body>
+</html>
