Fix repo structure

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         border:1px solid rgba(148,163,184,.18); border-radius:14px; padding:1rem 1.1rem;">
         <div style="font-size:.8rem;color:#93c5fd;margin-bottom:.35rem;">K-12 Education</div>
         <h3 style="font-size:1.1rem;line-height:1.35;margin-bottom:.5rem;">
-          <a href="/blog/posts/k12-curriculum-design.html" style="color:#e5e7eb;text-decoration:none;">Building a K-12 Cybersecurity Curriculum That Actually Works</a>
+          <a href="/pages/blog/posts/k12-curriculum-design.html" style="color:#e5e7eb;text-decoration:none;">Building a K-12 Cybersecurity Curriculum That Actually Works</a>
         </h3>
         <div style="font-size:.85rem;color:#94a3b8;">Jan 15, 2025 · 8 min read</div>
       </article>
@@ -878,7 +878,7 @@
         border:1px solid rgba(148,163,184,.18); border-radius:14px; padding:1rem 1.1rem;">
         <div style="font-size:.8rem;color:#93c5fd;margin-bottom:.35rem;">Community Impact</div>
         <h3 style="font-size:1.1rem;line-height:1.35;margin-bottom:.5rem;">
-          <a href="/blog/posts/nonprofit-security-gap.html" style="color:#e5e7eb;text-decoration:none;">The Nonprofit Security Gap: Why 27% Experience Breaches</a>
+          <a href="/pages/blog/posts/nonprofit-security-gap.html" style="color:#e5e7eb;text-decoration:none;">The Nonprofit Security Gap: Why 27% Experience Breaches</a>
         </h3>
         <div style="font-size:.85rem;color:#94a3b8;">Jan 10, 2025 · 5 min read</div>
       </article>
@@ -888,14 +888,14 @@
         border:1px solid rgba(148,163,184,.18); border-radius:14px; padding:1rem 1.1rem;">
         <div style="font-size:.8rem;color:#93c5fd;margin-bottom:.35rem;">Cybersecurity Tips</div>
         <h3 style="font-size:1.1rem;line-height:1.35;margin-bottom:.5rem;">
-          <a href="/blog/posts/family-digital-safety.html" style="color:#e5e7eb;text-decoration:none;">5 Digital Safety Conversations Every Family Should Have</a>
+          <a href="/pages/blog/posts/family-digital-safety.html" style="color:#e5e7eb;text-decoration:none;">5 Digital Safety Conversations Every Family Should Have</a>
         </h3>
         <div style="font-size:.85rem;color:#94a3b8;">Jan 8, 2025 · 6 min read</div>
       </article>
     </div>
 
     <div style="margin-top:1rem;">
-      <a href="/blog/index.html" style="
+      <a href="/pages/blog/index.html" style="
         display:inline-block;padding:.6rem 1rem;border:1px solid rgba(148,163,184,.25);
         border-radius:999px;color:#e5e7eb;text-decoration:none;">Read all posts →</a>
     </div>
@@ -931,8 +931,8 @@
     <footer style="background:#0a0a0a;border-top:1px solid #333;padding:1rem;text-align:center;color:#cbd5e1">
       © 2025 CyberSmrt • <a href="/index.html" style="color:#8ab4ff">Home</a> ·
       <a href="/index.html#programs" style="color:#8ab4ff">Programs</a> ·
-      <a href="/blog/index.html" style="color:#8ab4ff">Blog</a> ·
-      <a href="/about/index.html" style="color:#8ab4ff">About</a> ·
+      <a href="/pages/blog/index.html" style="color:#8ab4ff">Blog</a> ·
+      <a href="/pages/about/index.html" style="color:#8ab4ff">About</a> ·
       <a href="mailto:tony@cybersmrt.org" style="color:#8ab4ff">Contact</a>
     </footer>
   </noscript>
