--- a/index.html
+++ b/index.html
@@ -423,9 +423,22 @@
 </head>
 
 <body>
-    <div id="header-mount"></div>
-    <script defer src="/assets/js/header-loader.js"></script>
-    <script defer src="/assets/js/header-init.js"></script>
+    <!-- Shared header mount + loader -->
+      <div id="header-mount"></div>
+      <script defer src="/assets/js/header-loader.js"></script>
+      <script defer src="/assets/js/header-init.js"></script>
+
+      <!-- No-JS header fallback -->
+      <noscript>
+        <nav style="background:#0a0a0a;border-bottom:1px solid #333;padding:.75rem 1rem">
+          <a href="/index.html" style="color:#8ab4ff;font-weight:900;margin-right:1rem">CYBERSMRT</a>
+          <a href="/index.html" style="color:#cbd5e1;margin-right:1rem">Home</a>
+          <a href="/index.html#programs" style="color:#cbd5e1;margin-right:1rem">Programs</a>
+          <a href="/pages/blog/index.html" style="color:#cbd5e1;margin-right:1rem">Blog</a>
+          <a href="/pages/about/index.html" style="color:#cbd5e1;margin-right:1rem">About</a>
+          <a href="mailto:tony@cybersmrt.org" style="color:#cbd5e1">Contact</a>
+        </nav>
+      </noscript>
 
   <!-- ================= HERO ================= -->
   <section class="hero hero--split">
